# rust_from_scratch

./: Cargo.toml  README.md
src/destructuring/: main.rs
src/enum/: main.rs
src/function/: main.rs
src/generic/: main.rs
src/match/: main.rs
src/ownership/: main.rs
src/references/: main.rs
src/vector/: main.rs
