[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name="hello_world"
path="src/hello_world/main.rs"

[[bin]]
name="enum"
path="src/enum/main.rs"

[[bin]]
name="math"
path="src/math/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
